fix z-index

--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -223,7 +223,6 @@ a {
     margin-bottom: 0;
     padding-bottom: 0;
     position: relative;
-    z-index: 1;
 }
 .rowf {
     width: 80%;
